# socials-sniffer

./: .gitignore  README.md  agentAccounts.txt  biz-plan.md  pyproject.toml  requirements.txt  socials-sniffer-folder-structure.md  sync_deps.py
docs/: overview-v1.md
program_env/instagram/data_collectors/collectors/: mediaID.py  userFollowStats.py  userNames.py  userProfile.py
program_env/instagram/data_collectors/filters/: filterData.py
program_env/instagram/data_collectors/storage/raw-data/: all-scraped-user-data.json  all-scraped-users-media-id.json
program_env/utilities/: __init__.py  agencyUtils.py  filterUtils.py  jsonUtils.py  timeUtils.py  userDataUtils.py
program_env/utilities/agents/: agents.json
